# datasette-turnstile

./: README.md  pyproject.toml  spec.md
datasette_turnstile/: __init__.py  middleware.py  utils.py  verification.py  views.py
datasette_turnstile/templates/: turnstile_challenge.html
tests/: test_middleware.py  test_turnstile.py  test_utils.py  test_verification.py  test_views.py
