[project]
name = "datasette-turnstile"
version = "0.1a0"
description = "Integrate CAPTCHAs powered by Cloudflare Turnstile"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a20",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx>=0.36.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
datasette_turnstile = ["templates/*.html"]


[project.urls]
Homepage = "https://github.com/simonw/datasette-turnstile"
Changelog = "https://github.com/simonw/datasette-turnstile/releases"
Issues = "https://github.com/simonw/datasette-turnstile/issues"
CI = "https://github.com/simonw/datasette-turnstile/actions"

[project.entry-points.datasette]
turnstile = "datasette_turnstile"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

